test/scc_test/expr/semantic-errors/072.a
072.t:4:10: error: expression must have integral type